# online-therapy

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
back-end/: .env.example  Dockerfile  db.sqlite3  pyproject.toml
back-end/account/: admin.py  apps.py  email.py  managers.py  models.py  serializers.py  signals.py  tests.py  tokens.py  urls.py  views.py
back-end/account/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_id_alter_profile_id.py  0004_alter_customuser_options_alter_profile_options_and_more.py  0005_alter_customuser_last_login.py  0006_alter_socialauth_options_socialauth_access_token_and_more.py
back-end/account/templates/email/: activation_email.html  appointment_booked.html  appointment_cancelled.html  appointment_confirmed.html  appointment_reminder.html  appointment_rescheduled.html  meeting_link_ready.html  password_reset_email.html
back-end/admin_app/: permissions.py  serializers.py  urls.py  views.py
back-end/ai/: models.py  urls.py
back-end/ai/api/: serializers.py  views.py
back-end/ai/ingestion/: chunking.py  pipeline.py
back-end/ai/migrations/: 0001_initial.py  0002_chatsession_chatmessage.py  0002_enable_pgvector.py  0003_enable_pgvector.py
back-end/ai/services/: chat_service.py  embeddings.py  rag_chain.py  retrieval.py
back-end/blog/: models.py  serializers.py  urls.py  views.py
back-end/blog/management/commands/: scrape_articles.py  scrape_content.py
back-end/blog/migrations/: 0001_initial.py
back-end/core/: exceptions.py  middleware.py  settings.py  throttles.py  urls.py
back-end/core/settings/: __init__.py  base.py  development.py  production.py
back-end/therapy/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
back-end/therapy/management/commands/: seed_specialties.py  send_appointment_reminders.py
back-end/therapy/migrations/: 0001_initial.py  0002_appointment_meeting_link.py
backend/: settings.py
front-end/: .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
front-end/src/: app.css  app.d.ts  app.html  env.d.ts
front-end/src/lib/: index.ts
front-end/src/lib/api/: appointments.ts  auth.ts  client.ts  index.ts
front-end/src/lib/auth/: google.ts
front-end/src/lib/mock/: blogs.js  doctors.js  therapist-booking.ts
front-end/src/lib/schemas/: index.ts
front-end/src/lib/stores/: auth.ts  ui.ts
front-end/src/lib/types/: index.ts
front-end/src/lib/utils/: therapy.ts
front-end/src/routes/: +error.svelte  +layout.svelte  +page.svelte
front-end/src/routes/api/health/: +server.ts
front-end/src/routes/appointment/: +page.svelte
front-end/src/routes/book-appointment/: +page.svelte
front-end/src/routes/dashboard/: +page.svelte
front-end/src/routes/empty-appointment/: +page.svelte
front-end/src/routes/search/: +page.svelte
(+71 files in other folders)
