[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-anymail[sendgrid]>=14.0",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.29.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "six>=1.17.0",
]
